WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282685
ARMv7: don't generate invalid Index Air args
https://bugs.webkit.org/show_bug.cgi?id=282685
Summary
ARMv7: don't generate invalid Index Air args
Angelos Oikonomopoulos
Reported
2024-11-06 05:16:07 PST
Test that the form is valid before generating it.
Attachments
Add attachment
proposed patch, testcase, etc.
Angelos Oikonomopoulos
Comment 1
2024-11-06 05:21:13 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36259
EWS
Comment 2
2024-11-07 14:12:21 PST
Committed
286298@main
(f7cebf1b0a52): <
https://commits.webkit.org/286298@main
> Reviewed commits have been landed. Closing PR #36259 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-11-07 14:13:14 PST
<
rdar://problem/139467200
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug