ARMv7: don't generate invalid Index Air args https://bugs.webkit.org/show_bug.cgi?id=282685

Reviewed by Justin Michaud.

Not all indexes are valid for floats. Make sure we check that the Air
form is valid and use a fallback if not.

While looking at this, update MemoryValue::isLegalOffsetImpl to pass the
appropriate move type to isValidAddrForm, as, again, floats have
different constraints on ARMv7.

Enable a couple of tests that now pass.

* Source/JavaScriptCore/b3/B3LowerToAir32_64.cpp:
* Source/JavaScriptCore/b3/B3MemoryValueInlines.h:
(JSC::B3::MemoryValue::isLegalOffsetImpl const):
* Source/JavaScriptCore/b3/testb3_failingArmV7Tests.inc:

Canonical link: https://commits.webkit.org/286298@main